# iot-monitoring-backend

./: .env.example  .example.env  .gitignore  README.md  alembic.ini  pyproject.toml
infra/docker/: Dockerbuild  docker-compose.local.yaml  docker-compose.prod.yaml  docker-compose.yaml
migrations/: env.py
migrations/versions/: 17bab55bb08d_beacon_support.py  389ef70adc2e_uid_field.py  9ebb4c34ae2e_device_type_required.py  abce9f520f4e_add_name_to_floor_devices.py  c2616867cef3_drop_device_kind.py  e7d5bc656a63_initial.py  fd9e4c018580_building_model.py
src/app/: main.py
src/app/core/: db.py  deps.py  settings.py
src/app/models/: building.py  floor.py  floor_devices.py
src/app/routers/: building.py  devices.py  floorplan.py  floors.py  realtime.py
src/app/schemas/: auth.py  badge_telemetry.py  building.py  core.py  device.py  device_data.py  devices.py  floor.py  floor_device.py  floorplan.py  pagination.py  s3_storage.py  subscribtions.py  vega.py
src/app/schemas/vega/: auth.py  auth_close.py  base.py  get_device_data.py  get_devices.py  realtime.py
src/app/services/: building_service.py  connection_manager.py  floor_service.py  payload_decoder_service.py  payload_decoders.py  realtime_hub.py  s3_storage.py  vega_client.py
src/app/services/decoders/: base.py  smart_badge.py  smart_ms0101.py  smart_wb0101.py  utils.py
