[project]
name = "vega-monitoring-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "boto3>=1.43.2",
    "fastapi[standard]>=0.136.1",
    "sqlalchemy[asyncio]>=2.0.49",
]
